--- a/Website/departments.html
+++ b/Website/departments.html
@@ -18,9 +18,11 @@
     <!-- Men's Department -->
     <div class="ministry-container">
       <div class="leader-card">
-       <img src="../assets-and-images/icons/temp-male-icon.svg"  alt="Owen Wattson">
-        <div class="leader-name">Owen Wattson</div>
-      </div>
+            <div class="leader-photo" style=" background-image: url(../assets-and-images/images/Elder-Watson.webp);"></div>
+            <div class="leader-info">
+              <div class="leader-name">Owen Wattson</div>
+            </div>
+          </div>
       <div class="ministry-block">
         <div class="ministry-bg"></div>
         <div class="ministry-content">
@@ -73,7 +75,7 @@
         <div class="ministry-bg"></div>
         <div class="ministry-content">
           <h2>Sunday School</h2>
-          <p>Teaching the Word of God with clarity and care to children, youth, and adults of all ages.</p>
+          <p>"Great Sunday Schools Build Great Churches" <br>Teaching the Word of God with clarity and care to children, youth, and adults of all ages.</p>
           <p class="vccs">Visual Content coming soon</p>
         </div>
       </div>
