--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -6,12 +6,43 @@
     <title>New Here</title>
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="/styles/backToTop.css">
+    <link rel="stylesheet" href="/styles/newHere.css">
     <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
     <body>
         <div id="header"></div>
         <div class="temp-banner"></div>
         <main>
+          <section class="sec welcome">
+            <h1>Welcome to Gospel Tabernacle Church</h1>
+            <p>We are delighted to have you here! Whether you are new to the faith or looking for a church home, we invite you to explore our community.</p>
+            <p>At Gospel Tabernacle Church, we are committed to sharing the love of Jesus Christ and fostering a welcoming environment for all. Our mission is to spread the gospel, support one another in faith, and serve our community.</p>
+            <p>Take a look at our Social Media to get a taste of our community and services</p>
+          </section>
+          <section class="sec planvisit">
+            <h2>Plan a Visit</h2>
+            <p>We would love to have you join us for a service! Here’s what you need to know:</p>
+            <ul>
+              <li>Service Times: Sundays at 11:30 AM</li>
+              <li>Location: 2314 Snyder Avenue Brooklyn NY</li>
+             
+            </ul>
+          </section>
+          <section class="sec whattoexpect">
+            <h2>What to Expect</h2>
+            <ul>
+              <li>Warm and welcoming atmosphere</li>
+              <li>Uplifting teachings in Sunday School</li>
+              <li>Spirit-filled worship services</li>
+              <li>Engaging Praise and Worship with singing and music</li>
+              <li>Opportunities for fellowship and service</li>
+            </ul>
+          </section>
+          <section class="sec getinvolved">
+            <h2>Get Involved</h2>
+            <p>We encourage you to join us for our Sunday services and participate in our various ministries. There is a place for everyone!</p>
+          </section>
 
         </main>
         <button onclick="topFunction()" id="backToTop" title="Go to top">
@@ -20,9 +51,7 @@
         <div id="footer"></div>
         <script src="../scripts/include.js"></script>
         <script src="/scripts/menu.js"></script>
-        <script>
-
-        </script>
+        <script src="/scripts/backToTop.js"></script>
 
    </body>
 </html>
