--- a/Website/about-us.html
+++ b/Website/about-us.html
@@ -83,7 +83,7 @@
         </div>
       </a>
         <div class="leader-card"> <!--Elder Davis-->
-            <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Elder Richard Davis">
+            <img src="../assets-and-images/images/officerPictures/elderDavisFinished.jpeg" alt="Elder Richard Davis">
             <div class="leader-info">
               <div class="leader-name">Richard Davis</div>
               <div class="ministry">Senior Elder</div>
@@ -99,7 +99,7 @@
         </div>
       </a>
         <div class="leader-card">
-              <img src="../assets-and-images/icons/temp-female-icon.svg"alt="Dr Merlene Scott-Burrell">
+              <img src="../assets-and-images/images/officerPictures/drBurrell.jpeg"alt="Dr Merlene Scott-Burrell">
               <div class="leader-info">
                 <div class="leader-name">Dr Merlene Scott-Burrell</div>
                 <div class="ministry">Senior Minister</div>
