--- a/Website/leadership.html
+++ b/Website/leadership.html
@@ -257,7 +257,23 @@
         </div>
       </div>
     </div>
-  <!-- Sr. Elder's Bio -->
+   <div class="bio" id="elder-wattson">   <!-- Sr. Elder's Bio -->
+      <div class="test" style="background-image: url(/assets-and-images/images/officerPictures/elderDavisFinished.jpeg);
+      background-size: cover; background-position: center;
+      width: 400px; height: 525px;
+      margin-right: 30px;
+      border-radius: 25px;
+      "></div>
+    <div class="p-bio">
+      <h6 class="title">Senior Elder</h6>
+      <h2 class="name">Elder Richard Davis</h2>
+      <div>
+      <p class="bio-info">Elder Richard Davis was born in Manchester, Jamaica, WI, the sixth of eight children. At age 12, he was baptized in Jesus’ name and later received the Holy Ghost at the Shiloh Church of Jesus Christ, Apostolic. In 2002, he was ordained by the late Bishop Evans of Waterloo, St. Elizabeth, and served faithfully until migrating to the U.S. with his family in 2006.</p>
+      <p class="bio-info">He now worships at the Gospel Tabernacle Church of Jesus Christ in Brooklyn, NY under the leadership of Bishop Kingsford Bloomfield. Known for his dedication to ministry and deep love for God’s Word, he was elevated to the office of Elder within the GTC organization. He holds a Doctorate in Theology from Mount Olive Theological Seminary and has served in tent ministry across the U.S. and Caribbean for over 15 years.</p>
+      <p class="bio-info">Elder Davis has been married to his beloved wife for over 30 years. Together they are blessed with three children. He remains committed to fulfilling God’s call with humility and unwavering devotion.</p>
+      </div>
+    </div>
+  </div>
     <div class="bio" id="elder-wattson">   <!-- Elder's Bio -->
       <div class="test" style="background-image: url(/assets-and-images/images/Elder-Watson.webp);
       background-size: cover; background-position: center;
@@ -275,7 +291,23 @@
       </div>
     </div>
   </div>
-  <!--Sr. Minister Bio-->
+      <div class="bio" id="elder-wattson">   <!-- Sr. Minister Bio -->
+      <div class="test" style="background-image: url(/assets-and-images/images/officerPictures/drBurrell.jpeg);
+      background-size: cover; background-position: center;
+      width: 400px; height: 525px;
+      margin-right: 30px;
+      border-radius: 25px;
+      "></div>
+    <div class="p-bio">
+      <h6 class="title">Senior Minister</h6>
+      <h2 class="name">Dr Merlene Scott-Burrell</h2>
+      <div>
+      <p class="bio-info">Minister Merlene Scott-Burrell was born in St. Ann, Jamaica. She holds a BS in Accounting and a Certificate in Management Studies from the University of the West Indies, Mona. She accepted Christ in 1978 at Pentecostal Gospel Temple under Bishop Carmen Stewart, where she served in the Church Office and Missions.</p>
+      <p class="bio-info">Since 1992, she has been a devoted member of the Gospel Tabernacle Church of Jesus Christ, inspired by the leadership of the late Bishop Samuel Green and Bishop Kingsford Bloomfield. She earned her Doctorate in Theology in 2002 and has served in roles including Church Treasurer, Chaplain, and Sunday School Superintendent.</p>
+      <p class="bio-info">A Certified Public Accountant and retired New York State employee, Minister Scott-Burrell continues to serve faithfully as Minister and Church Mother alongside Pastor Kevin Gayle. She is married to Conron Burrell and is blessed with two children and seven grandchildren. Her life is anchored in Psalm 34:1 — “I will bless the Lord at all times, His praise shall continually be in my mouth.”</p>
+      </div>
+    </div>
+  </div>
   <!--Officer's Section-->
   <section class="sec officer-sec" id="officers">
     <h1>Our Officers</h1>
